--- a/assignment01/PythonFunctions.ipynb
+++ b/assignment01/PythonFunctions.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "cooperative-permit",
    "metadata": {},
    "outputs": [],
@@ -255,11 +255,9 @@
    "outputs": [],
    "source": [
     "def isPrime(x):\n",
-    "    if x < 1:\n",
+    "    if x <= 1:\n",
     "        return False\n",
-    "    if x == 1:\n",
-    "        return True\n",
-    "    for y in range((x - 1), 1, -1):\n",
+    "    for y in range(2,x):\n",
     "        if x % y == 0:\n",
     "            return False\n",
     "    return True"
@@ -282,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
