--- a/assignment01/PythonFunctions.ipynb
+++ b/assignment01/PythonFunctions.ipynb
@@ -91,13 +91,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "cooperative-permit",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def incrementByOne(a):\n",
-    "    return a+1"
+    "    return a + 1"
    ]
   },
   {
@@ -132,18 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "played-japanese",
    "metadata": {},
    "outputs": [],
    "source": [
     "def factorial(n):\n",
-    "    if n == 0:\n",
+    "    if n < 0:\n",
+    "        return \"undefined: Parameter has to be positive.\"\n",
+    "    elif n < 2:\n",
     "        return 1\n",
-    "    elif n >= 0:\n",
-    "        return n * factorial(n-1)\n",
-    "    elif n < 0:\n",
-    "        return \"undefined: Parameter has to be positive.\"\n"
+    "    else:\n",
+    "        return n * factorial(n - 1)"
    ]
   },
   {
@@ -157,16 +168,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "south-donna",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def betweenOneAndTen(a):\n",
-    "    for a in range(1,11):\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    return a in range(1,11)"
    ]
   },
   {
@@ -186,10 +205,7 @@
    "outputs": [],
    "source": [
     "def xGreaterY(x,y):\n",
-    "    if x > y:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    return x > y"
    ]
   },
   {
@@ -209,10 +225,7 @@
    "outputs": [],
    "source": [
     "def xLessThanY(x,y):\n",
-    "    if x < y:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    return x < y"
    ]
   },
   {
@@ -226,16 +239,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "seven-headline",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def xEqualsY(x,y):\n",
-    "    if x == y:\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    return x == y"
    ]
   },
   {
