Added bot tasks done

--- a/assignment03/Perceptron_Done.ipynb
+++ b/assignment03/Perceptron_Done.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 48,
    "id": "4548a5df",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 49,
    "id": "5f7f4145",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 50,
    "id": "dbedf7d2",
    "metadata": {},
    "outputs": [],
@@ -110,17 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 51,
    "id": "c5573257",
    "metadata": {},
    "outputs": [],
    "source": [
     "def inner_activation(inputs, weights):\n",
     "    h = 0\n",
-    "    if len(inputs) != len(weights):\n",
+    "    if inputs.size != len(weights):\n",
     "        print(\"Not equal number of inputs and weights\")\n",
     "    \n",
-    "    for i in range(len(inputs)):\n",
+    "    for i in range(inputs.size):\n",
     "        h = h + (inputs[i] * weights[i])\n",
     "    \n",
     "    return h"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 52,
    "id": "e0faaade",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 53,
    "id": "3c683f24",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 54,
    "id": "98945fb4",
    "metadata": {},
    "outputs": [],
@@ -225,8 +225,10 @@
     "    :param inputs:\n",
     "    :param weights:\n",
     "    \"\"\"\n",
-    "    inner_act = inner_activation(inputs, weights)\n",
-    "    return g(inner_act)"
+    "    activations = []\n",
+    "    for input_val in inputs:\n",
+    "        activations.append(g(inner_activation(input_val, weights)))\n",
+    "    return activations"
    ]
   },
   {
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 55,
    "id": "9487cc8d",
    "metadata": {},
    "outputs": [],
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 56,
    "id": "d17db9c1",
    "metadata": {},
    "outputs": [],
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 57,
    "id": "d25dba3e",
    "metadata": {},
    "outputs": [
@@ -382,8 +384,8 @@
     "for i in range(epochs):\n",
     "    # Diese Schleife in forward pass?\n",
     "    for j in range(len(x)):\n",
-    "        outer_act = forward_pass(x[j], weights)\n",
-    "        update(weights, t[j], x[j], outer_act)\n",
+    "        outer_act = forward_pass(x, weights)\n",
+    "        weights = update(weights, t[j], x[j], outer_act[j])\n",
     "        \n",
     "    weight_history.append(weights.copy())\n",
     "        \n",
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 58,
    "id": "e5701db4",
    "metadata": {},
    "outputs": [],
@@ -450,12 +452,12 @@
     "    for i in range(len(labels)):\n",
     "        sum_error = sum_error + (labels[i] - predictions[i]) ** 2\n",
     "        \n",
-    "    return sum_error"
+    "    return (0.5 * sum_error)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 59,
    "id": "ab566027",
    "metadata": {},
    "outputs": [
@@ -463,17 +465,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "0.0\n"
      ]
     }
    ],
    "source": [
     "# getting the prediction error for the whole dataset\n",
     "# TODO this right? added for loop\n",
-    "preds = []\n",
-    "for data_point in x:\n",
-    "    preds.append(forward_pass(data_point, weights))\n",
-    "\n",
+    "preds = forward_pass(x, weights)\n",
     "print(error(t,preds))"
    ]
   },
@@ -483,44 +482,50 @@
    "metadata": {},
    "source": [
     "## 4.5 Deploy the model\n",
-    "Now that we have a perfectly working and evaluated model, the most interesting part for the machine learning researcher is done. However, the end user, who might not be as familiar with neural networks as we are, might have trouble applying the model to new, unseen data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "275fcf1e",
-   "metadata": {},
-   "source": [
+    "Now that we have a perfectly working and evaluated model, the most interesting part for the machine learning researcher is done. However, the end user, who might not be as familiar with neural networks as we are, might have trouble applying the model to new, unseen data.\n",
+    "\n",
     "### Task 4.5.1 The AND function\n",
     "We want to write a function that does not require the user to know about inner and outer activations or transfer functions but still enable them to harness the power of our model.\n",
     "\n",
-    "Complete the function `AND(...)` that takes as input too boolean values A and B and returns the prediction of our perceptron model."
+    "\n",
+    "Complete the function `AND(...)` that takes as input too boolean values A and B and returns the prediction of our perceptron model.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "0e8895d3",
+   "execution_count": 86,
+   "id": "a76884dc-9019-4c34-9fb8-c818e33addd1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "0\n",
-      "0\n",
-      "0\n"
+      "[[1], [0]]\n",
+      "[0]\n",
+      "[0]\n",
+      "[0]\n"
      ]
     }
    ],
    "source": [
     "def AND(a, b):\n",
     "    bias = 1\n",
-    "    data_point = [bias, a, b]\n",
+    "    data_point = np.array([[bias, a, b]])\n",
     "    return forward_pass(data_point, weights)\n",
     "\n",
-    "print(AND(1, 1))\n",
+    "\n",
+    "def AND2(inputs):\n",
+    "    bias = 1\n",
+    "    results = []\n",
+    "    for i in range(len(inputs)):\n",
+    "        data_point = np.array([[bias, inputs[i][0], inputs[i][1]]])\n",
+    "        results.append(forward_pass(data_point, weights))\n",
+    "        \n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "print(AND2([[1, 1], [1, 0]]))\n",
     "print(AND(1, 0))\n",
     "print(AND(0, 1))\n",
     "print(AND(0, 0))"
