--- a/assignment04/Evaluation.ipynb
+++ b/assignment04/Evaluation.ipynb
@@ -16,10 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "6e5ff570",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in ./.local/lib/python3.9/site-packages (1.11.0)\n",
+      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch) (4.2.0)\n",
+      "Requirement already satisfied: sklearn in ./.local/lib/python3.9/site-packages (0.0)\n",
+      "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.9/dist-packages (from sklearn) (1.1.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=1.0.0 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (1.1.0)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (1.22.4)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (1.8.1)\n"
+     ]
+    }
+   ],
    "source": [
     "# install the required packages\n",
     "!python -m pip install torch\n",
@@ -28,10 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "32f13a37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7f1da40f2390>"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -51,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "1ccc446e",
    "metadata": {},
    "outputs": [],
@@ -85,10 +111,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "26d787d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _wine_dataset:\n",
+      "\n",
+      "Wine recognition dataset\n",
+      "------------------------\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "    :Number of Instances: 178 (50 in each of three classes)\n",
+      "    :Number of Attributes: 13 numeric, predictive attributes and the class\n",
+      "    :Attribute Information:\n",
+      " \t\t- Alcohol\n",
+      " \t\t- Malic acid\n",
+      " \t\t- Ash\n",
+      "\t\t- Alcalinity of ash  \n",
+      " \t\t- Magnesium\n",
+      "\t\t- Total phenols\n",
+      " \t\t- Flavanoids\n",
+      " \t\t- Nonflavanoid phenols\n",
+      " \t\t- Proanthocyanins\n",
+      "\t\t- Color intensity\n",
+      " \t\t- Hue\n",
+      " \t\t- OD280/OD315 of diluted wines\n",
+      " \t\t- Proline\n",
+      "\n",
+      "    - class:\n",
+      "            - class_0\n",
+      "            - class_1\n",
+      "            - class_2\n",
+      "\t\t\n",
+      "    :Summary Statistics:\n",
+      "    \n",
+      "    ============================= ==== ===== ======= =====\n",
+      "                                   Min   Max   Mean     SD\n",
+      "    ============================= ==== ===== ======= =====\n",
+      "    Alcohol:                      11.0  14.8    13.0   0.8\n",
+      "    Malic Acid:                   0.74  5.80    2.34  1.12\n",
+      "    Ash:                          1.36  3.23    2.36  0.27\n",
+      "    Alcalinity of Ash:            10.6  30.0    19.5   3.3\n",
+      "    Magnesium:                    70.0 162.0    99.7  14.3\n",
+      "    Total Phenols:                0.98  3.88    2.29  0.63\n",
+      "    Flavanoids:                   0.34  5.08    2.03  1.00\n",
+      "    Nonflavanoid Phenols:         0.13  0.66    0.36  0.12\n",
+      "    Proanthocyanins:              0.41  3.58    1.59  0.57\n",
+      "    Colour Intensity:              1.3  13.0     5.1   2.3\n",
+      "    Hue:                          0.48  1.71    0.96  0.23\n",
+      "    OD280/OD315 of diluted wines: 1.27  4.00    2.61  0.71\n",
+      "    Proline:                       278  1680     746   315\n",
+      "    ============================= ==== ===== ======= =====\n",
+      "\n",
+      "    :Missing Attribute Values: None\n",
+      "    :Class Distribution: class_0 (59), class_1 (71), class_2 (48)\n",
+      "    :Creator: R.A. Fisher\n",
+      "    :Donor: Michael Marshall (MARSHALL%PLU@io.arc.nasa.gov)\n",
+      "    :Date: July, 1988\n",
+      "\n",
+      "This is a copy of UCI ML Wine recognition datasets.\n",
+      "https://archive.ics.uci.edu/ml/machine-learning-databases/wine/wine.data\n",
+      "\n",
+      "The data is the results of a chemical analysis of wines grown in the same\n",
+      "region in Italy by three different cultivators. There are thirteen different\n",
+      "measurements taken for different constituents found in the three types of\n",
+      "wine.\n",
+      "\n",
+      "Original Owners: \n",
+      "\n",
+      "Forina, M. et al, PARVUS - \n",
+      "An Extendible Package for Data Exploration, Classification and Correlation. \n",
+      "Institute of Pharmaceutical and Food Analysis and Technologies,\n",
+      "Via Brigata Salerno, 16147 Genoa, Italy.\n",
+      "\n",
+      "Citation:\n",
+      "\n",
+      "Lichman, M. (2013). UCI Machine Learning Repository\n",
+      "[https://archive.ics.uci.edu/ml]. Irvine, CA: University of California,\n",
+      "School of Information and Computer Science. \n",
+      "\n",
+      ".. topic:: References\n",
+      "\n",
+      "  (1) S. Aeberhard, D. Coomans and O. de Vel, \n",
+      "  Comparison of Classifiers in High Dimensional Settings, \n",
+      "  Tech. Rep. no. 92-02, (1992), Dept. of Computer Science and Dept. of  \n",
+      "  Mathematics and Statistics, James Cook University of North Queensland. \n",
+      "  (Also submitted to Technometrics). \n",
+      "\n",
+      "  The data was used with many others for comparing various \n",
+      "  classifiers. The classes are separable, though only RDA \n",
+      "  has achieved 100% correct classification. \n",
+      "  (RDA : 100%, QDA 99.4%, LDA 98.9%, 1NN 96.1% (z-transformed data)) \n",
+      "  (All results using the leave-one-out technique) \n",
+      "\n",
+      "  (2) S. Aeberhard, D. Coomans and O. de Vel, \n",
+      "  \"THE CLASSIFICATION PERFORMANCE OF RDA\" \n",
+      "  Tech. Rep. no. 92-01, (1992), Dept. of Computer Science and Dept. of \n",
+      "  Mathematics and Statistics, James Cook University of North Queensland. \n",
+      "  (Also submitted to Journal of Chemometrics).\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(wine[\"DESCR\"])"
    ]
@@ -105,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "f75984ff",
    "metadata": {},
    "outputs": [],
@@ -140,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "25616ba2",
    "metadata": {},
    "outputs": [],
@@ -199,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "2d001ee2",
    "metadata": {},
    "outputs": [],
@@ -226,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "8d4c1864",
    "metadata": {},
    "outputs": [],
@@ -257,10 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "19642ae1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on training set: 100.00\n"
+     ]
+    }
+   ],
    "source": [
     "model = create_model([10])\n",
     "model = trainModel(model, data, target, 50, lr = 0.01)\n",
@@ -284,14 +421,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "2cc2a619",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([100.0, 95.652174949646, 100.0, 95.45454382896423, 100.0, 100.0, 95.45454382896423, 100.0], 98.32015782594681)\n"
+     ]
+    }
+   ],
    "source": [
     "def kfold_crossvalidation(k, data, target, hidden = [100], epochs  = 50, lr = 0.01):\n",
-    "    # your code here\n",
-    "    return accuracies, avg_accuracy"
+    "    \n",
+    "    accuracies = []\n",
+    "    \n",
+    "    for i in range(k):\n",
+    "        model = create_model(hidden)\n",
+    "        \n",
+    "        #sd = subdata (sorry)\n",
+    "        sd = []\n",
+    "        sdtarget = []\n",
+    "        test = []\n",
+    "        testtarget = []\n",
+    "        for j in range(data.shape[0]):\n",
+    "            if j % k == i:\n",
+    "                test.append(data[j])\n",
+    "                testtarget.append(target[j])\n",
+    "            else:\n",
+    "                sd.append(data[j])\n",
+    "                sdtarget.append(target[j])\n",
+    "        \n",
+    "        sd = torch.stack(sd)\n",
+    "        test = torch.stack(test)    \n",
+    "        sdtarget = torch.stack(sdtarget)\n",
+    "        testtarget = torch.stack(testtarget)\n",
+    "        \n",
+    "        submodel = trainModel(model, sd, sdtarget, epochs, lr)\n",
+    "        accuracies.append(calculate_accuracy(test, testtarget, submodel).item()*100)\n",
+    "                          \n",
+    "    avg_accuracy = sum(accuracies)/len(accuracies)\n",
+    "                          \n",
+    "    return accuracies, avg_accuracy\n",
+    "\n",
+    "print(kfold_crossvalidation(8, data, target))"
    ]
   },
   {
@@ -325,13 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "id": "ac61c64d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def confusion_matrix(data,target,model):\n",
-    "    # your code here\n",
+    "def confusion_matrix(data,target,model): \n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        result = predict(data,model)\n",
+    "    \n",
+    "    m = torch.unique(target)\n",
+    "    m = m.size(dim=0)\n",
+    "    confusion_matrix = [[0 for i in range(m)] for j in range(m)]\n",
+    "    \n",
+    "    for k in range(target.size(dim=0)):\n",
+    "        confusion_matrix[target[k].item()][result[k].item()] += 1\n",
+    "        \n",
     "    return confusion_matrix"
    ]
   },
@@ -346,10 +531,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "id": "af7fbb52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19, 1, 0], [0, 25, 0], [0, 0, 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "torch.manual_seed(0)\n",
     "\n",
@@ -382,7 +575,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your answer here"
+    "# There is one error where an object that should be in \n",
+    "# the first class (0) gets assigned to the second class (1)"
    ]
   }
  ],
