--- a/assignment04/Evaluation.ipynb
+++ b/assignment04/Evaluation.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "6e5ff570",
    "metadata": {},
    "outputs": [
@@ -24,14 +24,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: torch in ./.local/lib/python3.9/site-packages (1.11.0)\n",
+      "Requirement already satisfied: torch in /home/container/.local/lib/python3.9/site-packages (1.11.0)\n",
       "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.9/dist-packages (from torch) (4.2.0)\n",
-      "Requirement already satisfied: sklearn in ./.local/lib/python3.9/site-packages (0.0)\n",
+      "Collecting sklearn\n",
+      "  Downloading sklearn-0.0.tar.gz (1.1 kB)\n",
       "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.9/dist-packages (from sklearn) (1.1.1)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (3.1.0)\n",
       "Requirement already satisfied: joblib>=1.0.0 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (1.1.0)\n",
       "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (1.22.4)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (1.8.1)\n"
+      "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.9/dist-packages (from scikit-learn->sklearn) (1.8.1)\n",
+      "Building wheels for collected packages: sklearn\n",
+      "  Building wheel for sklearn (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1315 sha256=fa009f79d8f62cc911e3996a708cce30a64a64b43558f298690ceabc9849bf35\n",
+      "  Stored in directory: /home/container/.cache/pip/wheels/e4/7b/98/b6466d71b8d738a0c547008b9eb39bf8676d1ff6ca4b22af1c\n",
+      "Successfully built sklearn\n",
+      "Installing collected packages: sklearn\n",
+      "Successfully installed sklearn-0.0\n"
      ]
     }
    ],
@@ -43,17 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "id": "32f13a37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f1da40f2390>"
+       "<torch._C.Generator at 0x7f57fc0c4f50>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "id": "1ccc446e",
    "metadata": {},
    "outputs": [],
@@ -111,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "id": "26d787d7",
    "metadata": {},
    "outputs": [
@@ -234,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "id": "f75984ff",
    "metadata": {},
    "outputs": [],
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "id": "25616ba2",
    "metadata": {},
    "outputs": [],
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "id": "2d001ee2",
    "metadata": {},
    "outputs": [],
@@ -355,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "id": "8d4c1864",
    "metadata": {},
    "outputs": [],
@@ -386,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "id": "19642ae1",
    "metadata": {},
    "outputs": [
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "id": "2cc2a619",
    "metadata": {},
    "outputs": [
@@ -429,39 +437,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "([100.0, 95.652174949646, 100.0, 95.45454382896423, 100.0, 100.0, 95.45454382896423, 100.0], 98.32015782594681)\n"
+      "([100.0, 95.652174949646, 100.0, 95.45454382896423, 100.0, 100.0, 100.0, 100.0], 98.88833984732628)\n"
      ]
     }
    ],
    "source": [
-    "def kfold_crossvalidation(k, data, target, hidden = [100], epochs  = 50, lr = 0.01):\n",
+    "def kfold_crossvalidation(k, data, target, hidden=[100], epochs=50, lr=0.01):\n",
     "    \n",
     "    accuracies = []\n",
     "    \n",
+    "    # Add up accuracies of each submodel\n",
     "    for i in range(k):\n",
     "        model = create_model(hidden)\n",
     "        \n",
-    "        #sd = subdata (sorry)\n",
-    "        sd = []\n",
-    "        sdtarget = []\n",
-    "        test = []\n",
-    "        testtarget = []\n",
+    "        train_data = []\n",
+    "        train_data_target = []\n",
+    "        test_data = []\n",
+    "        test_data_target = []\n",
+    "        \n",
+    "        # Get the kth datapoint from data -> split is not 1/k --> its every kth\n",
     "        for j in range(data.shape[0]):\n",
     "            if j % k == i:\n",
-    "                test.append(data[j])\n",
-    "                testtarget.append(target[j])\n",
+    "                test_data.append(data[j])\n",
+    "                test_data_target.append(target[j])\n",
     "            else:\n",
-    "                sd.append(data[j])\n",
-    "                sdtarget.append(target[j])\n",
+    "                train_data.append(data[j])\n",
+    "                train_data_target.append(target[j])\n",
     "        \n",
-    "        sd = torch.stack(sd)\n",
-    "        test = torch.stack(test)    \n",
-    "        sdtarget = torch.stack(sdtarget)\n",
-    "        testtarget = torch.stack(testtarget)\n",
+    "        # Get a tensor of the list of tensors created above\n",
+    "        train_data = torch.stack(train_data)\n",
+    "        test_data = torch.stack(test_data)    \n",
+    "        train_data_target = torch.stack(train_data_target)\n",
+    "        test_data_target = torch.stack(test_data_target)\n",
     "        \n",
-    "        submodel = trainModel(model, sd, sdtarget, epochs, lr)\n",
-    "        accuracies.append(calculate_accuracy(test, testtarget, submodel).item()*100)\n",
+    "        # Train the submodel\n",
+    "        submodel = trainModel(model, train_data, train_data_target, epochs, lr)\n",
+    "        # Append its accuracy to the result array (times 100 for better readability)\n",
+    "        accuracies.append(calculate_accuracy(test_data, test_data_target, submodel).item() * 100)\n",
     "                          \n",
+    "    # Calculate the average accuracy\n",
     "    avg_accuracy = sum(accuracies)/len(accuracies)\n",
     "                          \n",
     "    return accuracies, avg_accuracy\n",
@@ -480,10 +494,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b4c3d0a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([100.0,\n",
+       "  100.0,\n",
+       "  100.0,\n",
+       "  94.44444179534912,\n",
+       "  100.0,\n",
+       "  77.77777910232544,\n",
+       "  100.0,\n",
+       "  100.0,\n",
+       "  100.0,\n",
+       "  100.0],\n",
+       " 97.22222208976746)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.manual_seed(0)\n",
     "kfold_crossvalidation(10, data, target, [10], 10, 0.01)"
@@ -500,19 +535,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 35,
    "id": "ac61c64d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def confusion_matrix(data,target,model): \n",
+    "import numpy as np\n",
+    "def confusion_matrix(data, target, model):\n",
+    "    # Switch model to evaluation mode\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        result = predict(data,model)\n",
     "    \n",
-    "    m = torch.unique(target)\n",
-    "    m = m.size(dim=0)\n",
-    "    confusion_matrix = [[0 for i in range(m)] for j in range(m)]\n",
+    "    # Get number of classes\n",
+    "    unique_targets = torch.unique(target)\n",
+    "    m = unique_targets.size(dim=0)\n",
+    "    confusion_matrix = np.zeros((m, m), dtype=int)\n",
     "    \n",
     "    for k in range(target.size(dim=0)):\n",
     "        confusion_matrix[target[k].item()][result[k].item()] += 1\n",
@@ -531,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 34,
    "id": "af7fbb52",
    "metadata": {},
    "outputs": [
@@ -539,7 +577,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[19, 1, 0], [0, 25, 0], [0, 0, 12]]\n"
+      "tensor([0, 1, 2])\n",
+      "[[18  0  0]\n",
+      " [ 2 23  0]\n",
+      " [ 0  0 14]]\n"
      ]
     }
    ],
@@ -596,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
