--- a/assignment05/CustomEnvironment.ipynb
+++ b/assignment05/CustomEnvironment.ipynb
@@ -3,11 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "55f9b6dc",
-   "metadata": {},
+   "metadata": {
+    "id": "55f9b6dc"
+   },
    "source": [
     "# 3 Custom Environments\n",
     "In this task you are asked to create a environment for a reinforcement agent. It's common to create environments for agents by using the openai gym interface. It creates a good baseline for what is necessary to train a RL agent and makes it easy to try out different environments on the same algorithm.\n",
-    "If you need more information take a look at the documentation https://gym.openai.com/docs/.\n",
+    "If you need more information take a look at the documentation https://www.gymlibrary.ml/.\n",
     "You can find the implementation of all official enviroments on GitHub: https://github.com/openai/gym/tree/master/gym/envs if you need some examples. "
    ]
   },
@@ -15,17 +17,21 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d46e9eed",
-   "metadata": {},
+   "metadata": {
+    "id": "d46e9eed"
+   },
    "outputs": [],
    "source": [
-    "pip install gym"
+    "pip install gym==0.21.0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1e12a89a",
-   "metadata": {},
+   "metadata": {
+    "id": "1e12a89a"
+   },
    "outputs": [],
    "source": [
     "import gym\n",
@@ -37,7 +43,9 @@
   {
    "cell_type": "markdown",
    "id": "e4a7d886",
-   "metadata": {},
+   "metadata": {
+    "id": "e4a7d886"
+   },
    "source": [
     "## 3.1 The Environment\n",
     "A openai gym environment consists of at least 3 methods. `__init__` the constructor which sets all the necassary values, a `step` function, which describes the behaviour of the environment and a `reset` function, which resets the starting state of the environment. In addition to that usually a `render` function is provided to visualize the behaviour of the environment.\n",
@@ -70,18 +78,20 @@
     "\n",
     "\n",
     "### Task 3.1.1\n",
-    "- Create a two dimensional, discrete environment of the size 8x8.\n",
+    "- Create a two dimensional, discrete environment of the size 10x10.\n",
     "- Each episode the agent should start at a random position, while the target always stays at the same position.\n",
     "- The agent should be able to move in all 4 directions, If the agent hits a wall it should do nothing.\n",
     "- An episode ends if the agent reaches the target.\n",
-    "- Reaching the target results in a reward of 1, while every other action should give a small negative reward."
+    "- Reaching the target results in a reward of 10, while every other action should give a small negative reward."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "174d6193",
-   "metadata": {},
+   "metadata": {
+    "id": "174d6193"
+   },
    "outputs": [],
    "source": [
     "class CustomEnv(gym.Env):\n",
@@ -90,7 +100,15 @@
     "        super(CustomEnv, self).__init__()\n",
     "        # Write a constructor for your enviroment\n",
     "        # Define the action_space and observation_space\n",
-    "        # Position your agent and the target in the enviroment \n",
+    "        # Position your agent and the target in the enviroment\n",
+    "        num_rows = 10\n",
+    "        num_cols = 10\n",
+    "        max_row = num_rows - 1\n",
+    "        max_col = num_columns - 1\n",
+    "        num_actions = 4\n",
+    "        \n",
+    "            \n",
+    "        \n",
     "        \n",
     "    def step(self, action):\n",
     "        # Write the step method for your enviroment. Make sure you agent does not go out of bounds\n",
@@ -123,7 +141,9 @@
   {
    "cell_type": "markdown",
    "id": "3ebcdafe",
-   "metadata": {},
+   "metadata": {
+    "id": "3ebcdafe"
+   },
    "source": [
     "## 3.2 Test with a random agent\n",
     "The following cell allows you to test your enviroment with a random agent."
@@ -133,7 +153,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a3dc404a",
-   "metadata": {},
+   "metadata": {
+    "id": "a3dc404a"
+   },
    "outputs": [],
    "source": [
     "env = CustomEnv()\n",
@@ -149,7 +171,9 @@
   {
    "cell_type": "markdown",
    "id": "aa73e00f",
-   "metadata": {},
+   "metadata": {
+    "id": "aa73e00f"
+   },
    "source": [
     "## Task 3.3 Test with a Q-Learning Agent\n",
     "In the previous task we wrote an agent that used the SARSA algorithm. Now we want to use a similar algorithm, Q-Learning, to solve your own custom environment. And of course visualise your training progress (Cumulative rewards over time).\n",
@@ -161,7 +185,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3a34d4e1",
-   "metadata": {},
+   "metadata": {
+    "id": "3a34d4e1"
+   },
    "outputs": [],
    "source": [
     "# your code here"
@@ -170,17 +196,21 @@
   {
    "cell_type": "markdown",
    "id": "8ea757dd",
-   "metadata": {},
+   "metadata": {
+    "id": "8ea757dd"
+   },
    "source": [
     "### Task 3.3.1 Size concerns for Tabular RL:\n",
-    "The table for learning our simple enviroment has the size 64x4 for now. Since we have 64 possible States and 4 actions. How much bigger would the table get if we allowed the target to be placed anywhere?  "
+    "The table for learning our simple enviroment has the size 100x4 for now. Since we have 100 possible States and 4 actions. How much bigger would the table get if we allowed the target to be placed anywhere?  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4a53e6db",
-   "metadata": {},
+   "metadata": {
+    "id": "4a53e6db"
+   },
    "outputs": [],
    "source": [
     "#Your Answer here"
@@ -188,8 +218,12 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "CustomEnvironment.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
