--- a/assignment05/Ensembles.ipynb
+++ b/assignment05/Ensembles.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0ad011a4",
    "metadata": {},
    "outputs": [],
@@ -57,12 +57,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bdfe78d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _digits_dataset:\n",
+      "\n",
+      "Optical recognition of handwritten digits dataset\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "    :Number of Instances: 1797\n",
+      "    :Number of Attributes: 64\n",
+      "    :Attribute Information: 8x8 image of integer pixels in the range 0..16.\n",
+      "    :Missing Attribute Values: None\n",
+      "    :Creator: E. Alpaydin (alpaydin '@' boun.edu.tr)\n",
+      "    :Date: July; 1998\n",
+      "\n",
+      "This is a copy of the test set of the UCI ML hand-written digits datasets\n",
+      "https://archive.ics.uci.edu/ml/datasets/Optical+Recognition+of+Handwritten+Digits\n",
+      "\n",
+      "The data set contains images of hand-written digits: 10 classes where\n",
+      "each class refers to a digit.\n",
+      "\n",
+      "Preprocessing programs made available by NIST were used to extract\n",
+      "normalized bitmaps of handwritten digits from a preprinted form. From a\n",
+      "total of 43 people, 30 contributed to the training set and different 13\n",
+      "to the test set. 32x32 bitmaps are divided into nonoverlapping blocks of\n",
+      "4x4 and the number of on pixels are counted in each block. This generates\n",
+      "an input matrix of 8x8 where each element is an integer in the range\n",
+      "0..16. This reduces dimensionality and gives invariance to small\n",
+      "distortions.\n",
+      "\n",
+      "For info on NIST preprocessing routines, see M. D. Garris, J. L. Blue, G.\n",
+      "T. Candela, D. L. Dimmick, J. Geist, P. J. Grother, S. A. Janet, and C.\n",
+      "L. Wilson, NIST Form-Based Handprint Recognition System, NISTIR 5469,\n",
+      "1994.\n",
+      "\n",
+      ".. topic:: References\n",
+      "\n",
+      "  - C. Kaynak (1995) Methods of Combining Multiple Classifiers and Their\n",
+      "    Applications to Handwritten Digit Recognition, MSc Thesis, Institute of\n",
+      "    Graduate Studies in Science and Engineering, Bogazici University.\n",
+      "  - E. Alpaydin, C. Kaynak (1998) Cascading Classifiers, Kybernetika.\n",
+      "  - Ken Tang and Ponnuthurai N. Suganthan and Xi Yao and A. Kai Qin.\n",
+      "    Linear dimensionalityreduction using relevance weighted LDA. School of\n",
+      "    Electrical and Electronic Engineering Nanyang Technological University.\n",
+      "    2005.\n",
+      "  - Claudio Gentile. A New Approximate Maximal Margin Classification\n",
+      "    Algorithm. NIPS. 2000.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "digits = # your code here\n",
+    "digits = datasets.load_digits()\n",
     "\n",
     "print(digits.DESCR)"
    ]
@@ -79,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "075926da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = # your code here\n",
-    "y = # your code here"
+    "X = digits[\"data\"]\n",
+    "y = digits[\"target\"]"
    ]
   },
   {
@@ -100,12 +154,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7969cab3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAIN:  1257 1257 [array([[ 0.,  0.,  5., ...,  0.,  0.,  0.],\n",
+      "       [ 0.,  0.,  0., ..., 10.,  0.,  0.],\n",
+      "       [ 0.,  0.,  0., ..., 16.,  9.,  0.],\n",
+      "       ...,\n",
+      "       [ 0.,  0.,  0., ...,  3.,  0.,  0.],\n",
+      "       [ 0.,  0.,  5., ..., 11.,  3.,  0.],\n",
+      "       [ 0.,  0.,  3., ...,  0.,  0.,  0.]]), array([0, 1, 2, ..., 4, 3, 1])]\n",
+      "TEST:  540 540 [array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+      "       [ 0.,  0.,  5., ...,  3.,  0.,  0.],\n",
+      "       [ 0.,  7., 16., ...,  0.,  0.,  0.],\n",
+      "       ...,\n",
+      "       [ 0.,  0.,  1., ...,  6.,  0.,  0.],\n",
+      "       [ 0.,  0.,  2., ..., 12.,  0.,  0.],\n",
+      "       [ 0.,  0., 10., ..., 12.,  1.,  0.]]), array([4, 0, 5, 3, 6, 9, 6, 1, 7, 5, 4, 4, 7, 2, 8, 2, 2, 5, 7, 9, 5, 4,\n",
+      "       8, 8, 4, 9, 0, 8, 9, 8, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3,\n",
+      "       4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 9, 5, 5, 6, 5,\n",
+      "       0, 9, 8, 9, 8, 4, 1, 7, 7, 3, 5, 1, 0, 0, 2, 2, 7, 8, 2, 0, 1, 2,\n",
+      "       6, 3, 3, 7, 3, 3, 4, 6, 6, 6, 4, 9, 1, 5, 0, 9, 5, 2, 8, 2, 0, 0,\n",
+      "       1, 7, 6, 3, 2, 1, 7, 4, 6, 3, 1, 3, 9, 1, 7, 6, 8, 4, 3, 1, 4, 0,\n",
+      "       5, 3, 6, 9, 6, 1, 7, 5, 4, 4, 7, 2, 8, 2, 2, 5, 7, 9, 5, 4, 8, 8,\n",
+      "       4, 9, 0, 8, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7,\n",
+      "       8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 9, 5, 5, 6, 5, 0, 9, 8, 9,\n",
+      "       8, 4, 1, 7, 7, 3, 5, 1, 0, 0, 2, 2, 7, 8, 2, 0, 1, 2, 6, 3, 3, 7,\n",
+      "       3, 3, 4, 6, 6, 6, 4, 9, 1, 5, 0, 9, 5, 2, 8, 2, 0, 0, 1, 7, 6, 3,\n",
+      "       2, 1, 7, 4, 6, 3, 1, 3, 9, 1, 7, 6, 8, 4, 3, 1, 4, 0, 5, 3, 6, 9,\n",
+      "       6, 1, 7, 5, 4, 4, 7, 2, 8, 2, 2, 5, 7, 9, 5, 4, 8, 8, 4, 9, 0, 8,\n",
+      "       9, 8, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 9, 0, 1,\n",
+      "       2, 3, 4, 5, 6, 7, 8, 9, 0, 9, 5, 5, 6, 5, 0, 9, 8, 9, 8, 4, 1, 7,\n",
+      "       7, 3, 5, 1, 0, 0, 2, 2, 7, 8, 2, 0, 1, 2, 6, 3, 3, 7, 3, 3, 4, 6,\n",
+      "       6, 6, 4, 9, 1, 5, 0, 9, 5, 2, 8, 0, 1, 7, 6, 3, 2, 1, 7, 4, 6, 3,\n",
+      "       1, 3, 9, 1, 7, 6, 8, 4, 3, 1, 4, 0, 5, 3, 6, 9, 6, 1, 7, 5, 4, 4,\n",
+      "       7, 2, 2, 5, 7, 9, 5, 4, 4, 9, 0, 8, 9, 8, 0, 1, 2, 3, 4, 5, 6, 7,\n",
+      "       8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9,\n",
+      "       0, 9, 5, 5, 6, 5, 0, 9, 8, 9, 8, 4, 1, 7, 7, 3, 5, 1, 0, 0, 2, 2,\n",
+      "       7, 8, 2, 0, 1, 2, 6, 3, 3, 7, 3, 3, 4, 6, 6, 6, 4, 9, 1, 5, 0, 9,\n",
+      "       5, 2, 8, 2, 0, 0, 1, 7, 6, 3, 2, 1, 7, 4, 6, 3, 1, 3, 9, 1, 7, 6,\n",
+      "       8, 4, 3, 1, 4, 0, 5, 3, 6, 9, 6, 1, 7, 5, 4, 4, 7, 2, 8, 2, 2, 5,\n",
+      "       7, 9, 5, 4, 8, 8, 4, 9, 0, 8, 9, 8])]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "def split(data, target, percentage):\n",
+    "    train = [data[:int(len(X) * percentage)], target[:int(len(X) * percentage)]]\n",
+    "    test = [data[int(len(X) * percentage):], target[int(len(X) * percentage):]]\n",
+    "    return train, test\n",
+    "\n",
+    "\n",
+    "train_set, test_set = split(X, y, 0.7)\n",
+    "print(\"TRAIN: \", len(train_set[0]), len(train_set[1]), train_set)\n",
+    "print(\"TEST: \", len(test_set[0]), len(test_set[1]), test_set)"
    ]
   },
   {
@@ -128,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "26b33171",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bc = # your code here (bagging classifier object)\n",
+    "bc = BaggingClassifier()\n",
     "\n",
-    "bc_model = # your code here (trained classifier)"
+    "bc_model = bc.fit(train_set[0], train_set[1])"
    ]
   },
   {
@@ -150,16 +257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "907a3964",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Bagging Classifier on Digits Dataset: 87.7778\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred = # your code here\n",
+    "y_pred = bc_model.predict(test_set[0])\n",
     "\n",
-    "bc_accuracy = # your code here\n",
+    "bc_accuracy = bc_model.score(test_set[0], test_set[1])\n",
     "\n",
-    "print(\"Accuracy of Bagging Classifier on Digits Dataset: %.4f\" % bc_accuracy)"
+    "print(\"Accuracy of Bagging Classifier on Digits Dataset: %.4f\" % (100 * bc_accuracy))"
    ]
   },
   {
@@ -190,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d07eab24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "abc = # your code here (AdaBoost classifier object)\n",
+    "abc = AdaBoostClassifier()\n",
     "\n",
-    "abc_model = # your code here (trained classifier)"
+    "abc_model = abc.fit(train_set[0], train_set[1])"
    ]
   },
   {
@@ -212,16 +327,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "08f853f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of AdaBoost Classifier on Digits Dataset: 26.4815\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred = # your code here\n",
+    "y_pred = abc_model.predict(test_set[0])\n",
     "\n",
-    "abc_accuracy = # your code here\n",
+    "abc_accuracy = abc_model.score(test_set[0], test_set[1])\n",
     "\n",
-    "print(\"Accuracy of AdaBoost Classifier on Digits Dataset: %.4f\" % abc_accuracy)"
+    "print(\"Accuracy of AdaBoost Classifier on Digits Dataset: %.4f\" % (abc_accuracy * 100))"
    ]
   },
   {
@@ -245,7 +368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -259,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
